--- a/P001818.opf/layers/v001/Pagination.yml
+++ b/P001818.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 761a9ffdfc374f6684ef8d63120f69a3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   adab2b1d7e2d47b19212fea2ce02d589:
