--- a/P001818.opf/layers/v002/Pagination.yml
+++ b/P001818.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 335680c1cf454a7a9beff341731af761
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4e72a1a841ee448795687bc21028e5ea:
