--- a/P001818.opf/meta.yml
+++ b/P001818.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P001818
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG16734
   title: ཐེ་ཨེནཏྲནཅེ་གཏེ་ཕོ༹ར་ཐེ་ཝིསེ ༼སེཅཏིཨོན་ཨཱིཨཱིཨཱི༽
