--- a/P001818.opf/meta.yml
+++ b/P001818.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001818
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:23:21.674469
 source_metadata:
   id: bdr:W1KG16734
   title: ཐེ་ཨེནཏྲནཅེ་གཏེ་ཕོ༹ར་ཐེ་ཝིསེ ༼སེཅཏིཨོན་ཨཱིཨཱིཨཱི༽
@@ -19,3 +19,5 @@ source_metadata:
       volume_number: 2
       total_pages: 336
       base_file: v002.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
